# mcp-guard

./: .dockerignore  .env.example  .gitignore  ALPHA_TEST.md  AUTH_FIX_SUMMARY.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCUMENTATION_PLAN.md  Dockerfile  MANUAL_TASKS.md  Makefile  NEXT_SESSION.md  NEXT_SESSION_PROMPT.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_AUDIT.md  STRIPE_FIX_SUMMARY.md  STRIPE_INTEGRATION_AUDIT.md  STRIPE_SETUP.md  analysis_debug.json  analysis_security.md  analysis_src.md  analysis_src_clean.md  clean_report.py  cobertura.xml  coverage.txt  coverage_final.txt  current_coverage.txt  deny.toml  docker-compose.yml  install.sh  mcp-guard.toml  private_key.pem  public_key.pem  tarpaulin-report.html  (+2 more)
.agent/workflows/: dev-workflow.md
.github/: RELEASE_WORKFLOW_SETUP.md  SECRETS_CHECKLIST.md
.github/workflows/: ci.yml  release-tiers.yml  release.yml
.uveddi/: database.db
archive/: env.local.OLD  env.production.OLD
benches/: performance.rs
crates/mcp-guard-cli/: Cargo.toml
crates/mcp-guard-cli/src/: main.rs
crates/mcp-guard-cli/tests/: auth_integration_tests.rs  cli_tests.rs  e2e_cli_tests.rs  http_server_tests.rs  mcp_handler_tests.rs  rate_limit_tests.rs  routing_tests.rs  server_tests.rs  transport_integration_tests.rs
crates/mcp-guard-cli/tests/fixtures/: echo_server.sh  invalid_config.toml  valid_config.toml
crates/mcp-guard-core/: Cargo.toml
crates/mcp-guard-core/benches/: performance.rs
crates/mcp-guard-core/migrations/: 20250105000000_init_auth_schema.sql
crates/mcp-guard-core/src/: lib.rs  mocks.rs  tier.rs
crates/mcp-guard-core/src/audit/: mod.rs
crates/mcp-guard-core/src/auth/: jwt.rs  mod.rs  mtls.rs  oauth.rs
crates/mcp-guard-core/src/authz/: mod.rs
crates/mcp-guard-core/src/cli/: mod.rs
crates/mcp-guard-core/src/config/: mod.rs
crates/mcp-guard-core/src/db/: mod.rs
crates/mcp-guard-core/src/guard_tools/: mod.rs
crates/mcp-guard-core/src/mcp_server/: mod.rs
crates/mcp-guard-core/src/observability/: mod.rs
crates/mcp-guard-core/src/rate_limit/: mod.rs
crates/mcp-guard-core/src/router/: mod.rs
crates/mcp-guard-core/src/server/: billing.rs  dashboard.rs  mod.rs
crates/mcp-guard-core/src/transport/: mod.rs
crates/mcp-guard-core/tests/: audit_tests.rs  integration_tests.rs  jwt_integration_tests.rs  oauth_flow_tests.rs  oauth_integration_tests.rs  server_lifecycle_tests.rs
crates/mcp-guard-enterprise/: Cargo.toml  LICENSE  README.md
crates/mcp-guard-enterprise/src/: lib.rs  license.rs
crates/mcp-guard-enterprise/src/guard_tools/: mod.rs
crates/mcp-guard-pro/: Cargo.toml  LICENSE  README.md
crates/mcp-guard-pro/src/: lib.rs  license.rs
docs/: ARCHITECTURE.md  AUTH_AUDIT_REPORT.md  AUTH_SETUP_GUIDE.md  SECURITY.md  STYLE_GUIDE.md  authentication.md  cli.md  configuration.md  deployment.md  multi-server.md  observability.md  pricing.md  quickstart.md  rate-limiting.md  transports.md  troubleshooting.md  walkthrough.md
docs/api/: http.md
docs/dev/: architecture.md  auth-provider.md  contributing.md  middleware.md  rate-limiting-internals.md  testing.md  transport.md
docs/enterprise/: keygen-setup.md
docs/integrations/: auth0.md  github-oauth.md  jaeger.md  splunk.md
examples/jwt-auth0/: README.md  mcp-guard.toml
examples/kubernetes/: README.md  deployment.yaml
examples/multi-server/: README.md  mcp-guard.toml
examples/oauth-github/: README.md  mcp-guard.toml
examples/simple-api-key/: README.md  mcp-guard.toml
landing/: .gitignore  README.md  SEO_IMPLEMENTATION_SUMMARY.md  SOCIAL_IMAGES.md  angular.json  jest.config.js  package-lock.json  package.json  playwright.config.ts  setup-jest.ts  tsconfig.app.json  tsconfig.spec.json  tsconfig.worker.json  wrangler.toml
landing/.claude/: settings.local.json
landing/playwright-report/: index.html
landing/public/: _headers  robots.txt  sitemap.xml
landing/src/: index.html  styles.scss  worker.ts
landing/src/app/: app.config.ts  app.routes.ts  app.ts
landing/src/app/components/background/: background.component.ts
landing/src/app/components/comparison/: comparison.component.ts
landing/src/app/components/cta/: cta.component.ts
landing/src/app/components/features/: features.component.ts
landing/src/app/components/footer/: footer.component.ts
landing/src/app/components/hero/: hero.component.ts
landing/src/app/shared/: scroll-animation.service.ts
landing/src/environments/: environment.prod.ts  environment.ts
landing/tests/: auth.spec.ts  demo_script.md.resolved  landing.spec.ts  license-flow.spec.ts  navigation.spec.ts
scripts/: README.md  add_license_headers.sh  dev.sh  fix-env-files.sh  frontend.sh  generate_license_keypair.sh  install-enterprise.sh  install-pro.sh  manual-checklist.md  manual-testing.sh  record-demo.sh  setup-secrets.sh  test-stripe.sh  test-with-filesystem-server.sh
src/: lib.rs  main.rs  mocks.rs
src/audit/: mod.rs
src/auth/: jwt.rs  mod.rs  mtls.rs  oauth.rs
src/authz/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/observability/: mod.rs
src/rate_limit/: mod.rs
src/router/: mod.rs
src/server/: mod.rs
src/transport/: mod.rs
templates/: mcp-guard.toml
test-environment/: gen_jwt.py  mcp-guard.toml
tests/: audit_tests.rs  auth_integration_tests.rs  cli_tests.rs  e2e_cli_tests.rs  integration_tests.rs  jwt_integration_tests.rs  oauth_flow_tests.rs  oauth_integration_tests.rs  server_lifecycle_tests.rs  server_tests.rs  transport_integration_tests.rs
tests/common/: mod.rs
tests/e2e/: github_oauth_test.sh  run_auth_tests.sh
workers/download-binary/: DEPLOYMENT.md  README.md  package.json  wrangler.toml
workers/download-binary/src/: index.ts  license-validator.ts  platform-detector.ts  types.ts
workers/sign-license/: DEPLOYMENT.md  README.md  package.json  tsconfig.json  wrangler.toml
workers/sign-license/src/: index.ts  types.ts
workers/stripe-webhook/: DEPLOYMENT.md  README.md  package.json  wrangler.toml
workers/stripe-webhook/src/: index.ts  types.ts
(+45 files in other folders)
