[package]
name = "mcp-guard"
version = "1.0.0"
edition = "2021"
authors = ["Austin Green"]
description = "A lightweight, high-performance security gateway for MCP servers"
license = "AGPL-3.0"
repository = "https://github.com/botzrdev/mcp-guard"
keywords = ["mcp", "security", "gateway", "proxy", "authentication"]
categories = ["authentication", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Configuration
config = "0.14"

# Authentication
jsonwebtoken = "9.3"
oauth2 = "4.4"

# Rate limiting
governor = "0.6"
dashmap = "5.5"

# Cryptography
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# URL encoding
urlencoding = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "trace"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# HTTP client (for JWKS fetching)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Stream utilities (for SSE) and cancellation token
tokio-util = { version = "0.7", features = ["io"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
