[workspace]
members = [
    "crates/mcp-guard-core",
    "crates/mcp-guard-cli",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Austin Green <austin@botzr.dev>"]
license = "AGPL-3.0"
repository = "https://github.com/botzrdev/mcp-guard"
homepage = "https://github.com/botzrdev/mcp-guard"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
